--- a/JoeCoffeeStore.StockManagement.App/App.xaml
+++ b/JoeCoffeeStore.StockManagement.App/App.xaml
@@ -2,7 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:JoeCoffeeStore.StockManagement.App"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/CoffeeOverviewView.xaml">
+    <!--StartupUri="View.CoffeeOverviewView.xaml"-->
+             
+             
     <Application.Resources>
          
     </Application.Resources>
